add Makefile; use shebang for run brain-games

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
     "name": "hexlet/code",
+    "bin": [
+      "bin/brain-games"
+    ],
     "description": "first Hexlet-project",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "Hexlet\\Code\\": "src/"
