add lib wp-cli/php-cli-tools; add composer-autoload

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
     "autoload": {
         "psr-4": {
             "Hexlet\\Code\\": "src/"
-        }
+        },
+        "files": [
+            "src/Cli.php"
+        ]
     },
     "authors": [
         {
@@ -16,5 +19,7 @@
             "email": "rushev84@yandex.ru"
         }
     ],
-    "require": {}
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.15"
+    }
 }
