add base logic for game-engine (Run.php) and brain-even (Even.php)

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "hexlet/code",
     "bin": [
-      "bin/brain-games"
+      "bin/brain-games",
+      "bin/brain-even"
     ],
     "description": "first Hexlet-project",
     "license": "MIT",
@@ -10,7 +11,9 @@
             "Hexlet\\Code\\": "src/"
         },
         "files": [
-            "src/Cli.php"
+            "src/Cli.php",
+            "src/Even.php",
+            "src/Run.php"
         ]
     },
     "authors": [
