--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "hexlet/code",
   "bin": [
     "bin/brain-games",
-    "bin/brain-even"
+    "bin/brain-even",
+    "bin/brain-calc"
   ],
   "description": "first Hexlet-project",
   "license": "MIT",
@@ -12,8 +13,9 @@
     },
     "files": [
       "src/Cli.php",
+      "src/Engine.php",
       "src/Games/Even.php",
-      "src/Engine.php"
+      "src/Games/Calc.php"
     ]
   },
   "authors": [
