--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "bin": [
     "bin/brain-games",
     "bin/brain-even",
-    "bin/brain-calc"
+    "bin/brain-calc",
+    "bin/brain-gcd"
   ],
   "description": "first Hexlet-project",
   "license": "MIT",
@@ -15,7 +16,8 @@
       "src/Cli.php",
       "src/Engine.php",
       "src/Games/Even.php",
-      "src/Games/Calc.php"
+      "src/Games/Calc.php",
+      "src/Games/Gcd.php"
     ]
   },
   "authors": [
