--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "bin/brain-even",
     "bin/brain-calc",
     "bin/brain-gcd",
-    "bin/brain-progression"
+    "bin/brain-progression",
+    "bin/brain-prime"
   ],
   "description": "first Hexlet-project",
   "license": "MIT",
@@ -19,7 +20,8 @@
       "src/Games/Even.php",
       "src/Games/Calc.php",
       "src/Games/Gcd.php",
-      "src/Games/Progression.php"
+      "src/Games/Progression.php",
+      "src/Games/Prime.php"
     ]
   },
   "authors": [
